add windows compose files

--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -25,4 +25,11 @@ RUN wget -q https://github.com/Kitware/CMake/releases/download/v3.29.2/cmake-3.2
 RUN tar -xvf /tmp/cmake.tar.gz --strip-components=1 -C ${CMAKE_HOME}
 RUN rm /tmp/cmake.tar.gz
 
+# install pwsh
+ENV PWSH_HOME=/opt/pwsh/7.4.2
+ENV PATH=${PWSH_HOME}:$PATH
+RUN wget -q https://github.com/PowerShell/PowerShell/releases/download/v7.4.2/powershell-7.4.2-linux-x64.tar.gz -O /tmp/pwsh.tar.gz
+RUN tar -xvf /tmp/pwsh.tar.gz -C ${PWSH_HOME}
+RUN rm /tmp/pwsh.tar.gz
+
 CMD ["tail", "-f", "/dev/null"]
