update docker and cmake scripts

--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,20 +1,34 @@
 FROM mcr.microsoft.com/windows:20H2
-SHELL ["powershell"]
+SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue'; Set-ExecutionPolicy Unrestricted;"]
+
+ENV CMAKE_VERSION='3.29.2'
+ENV PWSH_VERSION='7.4.2'
+ENV VS_VERSION='17'
+ENV VS_YEAR='2022'
 
 # install cmake
-ENV CMAKE_HOME='c:/cmake/3.29.2'
+ENV CMAKE_HOME="c:/cmake/${CMAKE_VERSION}"
 RUN [Environment]::SetEnvironmentVariable('PATH', \"$env:PATH;$env:CMAKE_HOME/bin\", [System.EnvironmentVariableTarget]::Machine)
-RUN Invoke-WebRequest -Uri 'https://github.com/Kitware/CMake/releases/download/v3.29.2/cmake-3.29.2-windows-x86_64.zip' -OutFile 'cmake.zip'
+RUN Invoke-WebRequest -Uri https://github.com/Kitware/CMake/releases/download/v${env:CMAKE_VERSION}/cmake-${env:CMAKE_VERSION}-windows-x86_64.zip -OutFile 'cmake.zip'
 RUN New-Item -ItemType Directory -Path $env:CMAKE_HOME -Force
 RUN tar -xvf cmake.zip --strip-components=1 -C $env:CMAKE_HOME
 RUN Remove-Item -Path 'cmake.zip' -Force
 
 # install pwsh
-ENV POWERSHELL_HOME='c:/pwsh/7.4.2'
+ENV POWERSHELL_HOME="c:/pwsh/${PWSH_VERSION}"
 RUN [Environment]::SetEnvironmentVariable('PATH', \"$env:PATH;$env:POWERSHELL_HOME\", [System.EnvironmentVariableTarget]::Machine)
-RUN Invoke-WebRequest -Uri 'https://github.com/PowerShell/PowerShell/releases/download/v7.4.2/PowerShell-7.4.2-win-x64.zip' -OutFile 'pwsh.zip'
+RUN Invoke-WebRequest -Uri https://github.com/PowerShell/PowerShell/releases/download/v${env:PWSH_VERSION}/PowerShell-${env:PWSH_VERSION}-win-x64.zip -OutFile 'pwsh.zip'
 RUN New-Item -ItemType Directory -Path $env:POWERSHELL_HOME -Force
 RUN tar -xvf pwsh.zip -C $env:POWERSHELL_HOME
 RUN Remove-Item -Path 'pwsh.zip' -Force
 
-CMD ["cmd", "/c", "ping", "-t", "localhost", ">", "NUL"]
+# install vs
+ENV VCVARS_HOME="C:/Program Files/Microsoft Visual Studio/${VS_YEAR}/Community/VC/Auxiliary/Build"
+COPY ./docker/windows/vscomponents.ps1 ./vscomponents.ps1
+RUN Invoke-WebRequest -Uri  https://aka.ms/vs/${env:VS_VERSION}/release/vs_community.exe -OutFile 'vs_community.exe'
+RUN . ./vscomponents.ps1; \
+    $Args = @('--wait', '--passive', '--norestart', '--nocache'); \
+    $Args += $VSComponents | ForEach { \"--add $_\" }; \
+    Start-Process -Wait -FilePath 'vs_community.exe' -ArgumentList $Args;
+RUN Remove-Item -Path 'vscomponents.ps1' -Force
+RUN Remove-Item -Path 'vs_community.exe' -Force
