--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -8,7 +8,8 @@ ENV VS_YEAR='2022'
 
 # install cmake
 ENV CMAKE_HOME="c:/cmake/${CMAKE_VERSION}"
-RUN [Environment]::SetEnvironmentVariable('PATH', \"$env:PATH;$env:CMAKE_HOME/bin\", [System.EnvironmentVariableTarget]::Machine)
+RUN Set-ItemProperty 'HKLM:\SYSTEM\CurrentControlSet\Control\Session Manager\Environment' 'PATH' \"$env:PATH;%CMAKE_HOME%/bin\" -Type 'ExpandString'
+RUN [System.Environment]::SetEnvironmentVariable('CMAKE_HOME', "${env:CMAKE_HOME}", 'Machine')
 RUN Invoke-WebRequest -Uri https://github.com/Kitware/CMake/releases/download/v${env:CMAKE_VERSION}/cmake-${env:CMAKE_VERSION}-windows-x86_64.zip -OutFile 'cmake.zip'
 RUN New-Item -ItemType Directory -Path $env:CMAKE_HOME -Force
 RUN tar -xvf cmake.zip --strip-components=1 -C $env:CMAKE_HOME
@@ -16,7 +17,8 @@ RUN Remove-Item -Path 'cmake.zip' -Force
 
 # install pwsh
 ENV POWERSHELL_HOME="c:/pwsh/${PWSH_VERSION}"
-RUN [Environment]::SetEnvironmentVariable('PATH', \"$env:PATH;$env:POWERSHELL_HOME\", [System.EnvironmentVariableTarget]::Machine)
+RUN Set-ItemProperty 'HKLM:\SYSTEM\CurrentControlSet\Control\Session Manager\Environment' 'PATH' \"$env:PATH;%POWERSHELL_HOME%/bin\" -Type 'ExpandString'
+RUN [System.Environment]::SetEnvironmentVariable('POWERSHELL_HOME', "${env:POWERSHELL_HOME}", 'Machine')
 RUN Invoke-WebRequest -Uri https://github.com/PowerShell/PowerShell/releases/download/v${env:PWSH_VERSION}/PowerShell-${env:PWSH_VERSION}-win-x64.zip -OutFile 'pwsh.zip'
 RUN New-Item -ItemType Directory -Path $env:POWERSHELL_HOME -Force
 RUN tar -xvf pwsh.zip -C $env:POWERSHELL_HOME
